# otb

./: .gitignore  Makefile  README.md  visualise.sh
src/: CMakeLists.txt  calc_B.f90  calc_current.f90  magnet_type.f90  main.f90  output.f90  pos_to_B.f90  prmfl.f90  vector.f90
visualise/: B_strength.gp  B_vector.gp  B_x.gp  B_z.gp
